--- a/BookReader/BookReader/BookReader.csproj
+++ b/BookReader/BookReader/BookReader.csproj
@@ -70,15 +70,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BookModel.cs" />
-    <Compile Include="Models\BookReaderContext.cs" />
-    <Compile Include="Models\ChapterModel.cs" />
-    <Compile Include="Models\ReferenceModel.cs" />
-    <Compile Include="Models\SourceBookModel.cs" />
-    <Compile Include="Models\TestData.cs" />
-    <Compile Include="Models\VerseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\Import.cs" />
     <Compile Include="ViewModels\AddReferenceViewModel.cs" />
     <Compile Include="ViewModels\ReadBookViewModel.cs" />
   </ItemGroup>
@@ -113,6 +105,7 @@
     <Content Include="Files\Source\001_Quran.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Files\Source\001_Quran_test.txt" />
     <Content Include="Files\Source\002_Gems.txt" />
     <Content Include="Files\Target\tabernacle.txt" />
     <Content Include="Global.asax" />
@@ -176,6 +169,12 @@
     <Content Include="Views\Reference\LinkVerse.cshtml" />
     <Content Include="Views\ReadBook\Index.cshtml" />
     <Content Include="Views\ReadBook\ReadReference.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BookReader.Model\BookReader.Data.csproj">
+      <Project>{C8F1D7D8-CEC1-46EF-8DB3-DC0A8CD190BA}</Project>
+      <Name>BookReader.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
