- Performed some file cleanup (renames, deletes)

--- a/BookReader/BookReader.WcfService/BookReader.WcfService.csproj
+++ b/BookReader/BookReader.WcfService/BookReader.WcfService.csproj
@@ -51,7 +51,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BookReader.Model\BookReader.Data.csproj">
+    <ProjectReference Include="..\BookReader.Data\BookReader.Data.csproj">
       <Project>{C8F1D7D8-CEC1-46EF-8DB3-DC0A8CD190BA}</Project>
       <Name>BookReader.Data</Name>
     </ProjectReference>
