--- a/BookReader/BookReader.WcfService/App.config
+++ b/BookReader/BookReader.WcfService/App.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true"/>
   </system.web>
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
@@ -11,14 +11,12 @@
       <service name="BookReader.WcfService.BookReaderService">
         <host>
           <baseAddresses>
-            <add baseAddress = "http://localhost:8732/BookReaderService/" />
+            <add baseAddress="http://localhost:8732/BookReaderService/"/>
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address ="" 
-                  binding="wsHttpBinding" 
-                  contract="BookReader.WcfService.IBookReaderService">
+        <endpoint address="" binding="wsHttpBinding" contract="BookReader.WcfService.IBookReaderService">
           
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
@@ -45,10 +43,10 @@
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceDebug includeExceptionDetailInFaults="False"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
