--- a/BookReader/BookReader.Data/BookReader.Data.csproj
+++ b/BookReader/BookReader.Data/BookReader.Data.csproj
@@ -61,6 +61,8 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataManager.cs" />
